# ksuinit

./: Cargo.toml  README.md  build.rs  build.zig
.github/workflows/: build-kernelsu-ko.yml  build-ksuinit.yml  ddk-lkm.yml
src/: boot.rs  elf_writer.zig  init.rs  init.zig  kmsg.zig  loader.rs  loader.zig  main.rs  main.zig  syscalls.zig
