[package]
name = "ksuinit"
version = "2.0.0"
edition = "2024"

[dependencies]
# for elf parsing
goblin = { git = "https://github.com/tiann/goblin" }
scroll = "0.12"
anyhow = "1"
rustix = { git = "https://github.com/Kernel-SU/rustix.git", rev = "4a53fbc", features = ["fs", "system"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
